Dark mode (still buggy)

--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,13 @@ body {
     align-items: center;
     padding-top: 30px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
+    background-color: #fafafa;
+    
 }
-
+.dark-mode {
+    color: rgb(255, 255, 255);
+    background-color: #3a3a3a;
+  }
 .inputBox {
     width: 100%;
     padding: 5px;
@@ -59,5 +63,5 @@ body {
 #credits {
     padding: 20px;
     text-align: right;
-    color: rgb(72, 72, 72);
+    color: rgb(255, 255, 255);
 }
